# em-solver

./: README.md  WORKSPACE.bazel
cad/capacitor/: BUILD.bazel  capacitor_m7_m8_100um_100um.step  capacitor_m7_m8_100um_2d.geo
mesh_generator/: BUILD.bazel  capacitor_mesh_generator.py  capacitor_mesh_generator_2d_main.py  capacitor_mesh_generator_3d_main.py  gmsh_interface.py  mesh_generator.py
model/: BUILD.bazel  capacitor.py
